[package]
name = "eambar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
bracket-lib = { version = "0.8", features = ["specs"] }
hex2d = "1.1.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
specs = { version = "0.18", features = ["derive"] }
